fix: horizontal scroll aligned

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ h2, h3 {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     text-align: center;
+    justify-content: center;
 }
   
 h1 {
@@ -65,6 +66,11 @@ a {
 img {
     display: block;
     width: 100%;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
   
 .nav {
